test/expected/cli/eval_function_body_error_location.out
== default mood, literal eval argument ==
shit: 1:32: warning: Command 'f' was not found.
     1 |  eval "f(){ echo \$((1/0)); }"; f
       |                                 ^~ here.
note: Did you mean ':'?
shit: eval:2:8: error: Arithmetic: division by zero.
     2 |  { echo $((1/0)); }
       |         ^~~~~~~~ here.
rc=1
== bash mood, literal eval argument ==
shit: eval:2:8: error: Arithmetic: division by zero.
     2 |  { echo $((1/0)); }
       |         ^~~~~~~~ here.
rc=127
== default mood, eval of a variable ==
shit: 1:61: warning: Command 'h' was not found.
     1 |  code=$(printf "%s" "h(){ echo \$((1/0)); }"); eval "$code"; h
       |                                                              ^~ here.
note: Did you mean ':'?
shit: eval:2:8: error: Arithmetic: division by zero.
     2 |  { echo $((1/0)); }
       |         ^~~~~~~~ here.
rc=1
== bash mood, function keyword form ==
shit: eval:2:8: error: Arithmetic: division by zero.
     2 |  { echo $((1/0)); }
       |         ^~~~~~~~ here.
rc=127
== function defined in default mood, called from bash, renders once ==
1
